
[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Bot de Telegram para recetas"
authors = ["Replit User"]

[tool.poetry.dependencies]
python = ">=3.11"
pyTelegramBotAPI = ">=4.26.0"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"